--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <base href="https://SergeyGladkyi.github.io/Todo/"> -->
+   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <title>To Do List</title>
 </head>
 <body>
     <header class="header">
         <div class="container">
             <div class="header_wrap">
-                <h1 class="header_wrap-title">To Do List</h1>
+                <h1 class="animate__bounce header_wrap-title">To Do List</h1>
             </div>
         </div>
     </header>
