--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +13,7 @@
     <header class="header">
         <div class="container">
             <div class="header_wrap">
-                <h1 class="animate__bounce header_wrap-title">To Do List</h1>
+                <h1 class="animate__rubberBand header_wrap-title">To Do List</h1>
             </div>
         </div>
     </header>
