added new function

--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <section class="board">
             <div class="container">
                 <div class="board-wrap">
-<!-- <div class="board_wrap__added">
-    <p class="board_wrap__added-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus rem possimus</p>
-    <button class="board_wrap__added-btn-remove">delete</button>
-</div> -->
+                    <!-- <div class="board_wrap__added">
+                        <p class="board_wrap__added-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus rem possimus</p>
+                            <button class="board_wrap__added-btn-remove">delete</button>
+                            <button class="board_wrap__added-btn-edit">edit</button>
+                </div> -->
                 </div>
             </div>
         </section>
