--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
     <main class="main">
         <section class="input">
             <div class="container">
+
+                <div class="creatPopUp_wrap">
+                    <div class="creatPopUp">
+                        <button class="btn_creatPopUp">X</button>
+                        <p class="creatPopUp_p">редактируйте задачу...</p>
+                        <textarea class="creatPopUp_textarea"></textarea>
+                        <div class="creatPopUp__btn-save-wrap">
+                            <button class="creatPopUp__btn-save">save</button>
+                        </div>
+                </div>
+                <div class="overlay"></div>
+
+                
                 <div class="input_wrap">
                     <input class="input_wrap__inpt" type="text" placeholder="Enter a task...">
                     <button class="input_wrap__btn-add">add</button>
